--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "ameer faisal",
   "license": "MIT",
   "dependencies": {
-    "electron": "^4.1.4"
+    "electron": "^4.1.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
